--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,3 @@
-/* .App {
-  text-align: center;
-} */
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -41,7 +37,7 @@
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
-  src: url("./assets/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2") format("woff2");
+  src: url("../../assets/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2") format("woff2");
 }
 
 .material-icons {
