--- a/src/assets/css/AdminCourseUpsertModel.css
+++ b/src/assets/css/AdminCourseUpsertModel.css
@@ -1,3 +1,7 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+ This feature is not a part of assignment 3. It is built for the project.
+========================================================= */
 .editCourseModalBody {
   display: flex;
   flex-direction: column;
