--- a/src/assets/css/AdminEditUserModel.css
+++ b/src/assets/css/AdminEditUserModel.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .editUserModalBody {
   display: flex;
   flex-direction: column;
