--- a/src/assets/css/AdminHeader.css
+++ b/src/assets/css/AdminHeader.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .protoHeader {
   display: flex;
   justify-content: space-between;
