--- a/src/assets/css/AdminModel.css
+++ b/src/assets/css/AdminModel.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .modal {
   position: fixed;
   top: 0;
