--- a/src/assets/css/AdminTabs.css
+++ b/src/assets/css/AdminTabs.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .tabs ul {
   display: flex;
   border-bottom: solid 1px #d9d9d9;
