--- a/src/assets/css/AdminToaster.css
+++ b/src/assets/css/AdminToaster.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .toaster-container {
   padding: 15px;
   position: fixed;
