--- a/src/assets/css/AdminUser.css
+++ b/src/assets/css/AdminUser.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .table-container {
   border: solid 1px #cacaca;
   border-radius: 5px;
