--- a/src/assets/css/AdminUserInfo.css
+++ b/src/assets/css/AdminUserInfo.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .userInfoItems {
   position: absolute;
   display: none;
