--- a/src/assets/css/AdminValidation.css
+++ b/src/assets/css/AdminValidation.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .errorMessage {
   font-size: 11px;
   color: red;
