--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
