--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -81,6 +81,7 @@
 .admin-app {
   height: 96vh;
   background-color: #3f51b5;
+  overflow: hidden;
 }
 
 .clickable {
@@ -95,8 +96,29 @@ button:disabled {
 
 .icon {
   color: #607373;
-  font-size: 16px;
+  font-size: 18px;
   padding-left: 10px;
+}
+
+.add-primary {
+  display: flex;
+  align-items: center;
+  color: #3f51b5;
+  text-decoration: none;
+  font-weight: 600;
+  border: none;
+  background: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.add-primary-discount {
+  font-size: 16px;
+  margin: 0 !important;
+}
+
+.add-primary span {
+  margin-right: 5px;
 }
 
 /* html {
