--- a/src/assets/css/AdminDiscount.css
+++ b/src/assets/css/AdminDiscount.css
@@ -1,3 +1,6 @@
+/*=======================================================
+ Author: [Sourav Malik] (sr343164@dal.ca)
+========================================================= */
 .add-discount {
   display: flex;
   justify-content: flex-end;
